# FlappyBirds

./: .gitignore  BuildScript.sh  CMakeLists.txt  README.md  Run.sh  TrainModel.sh  main.cpp
ComputerVision/: CMakeLists.txt  CVSession.cpp  CVSession.hpp  Observer.cpp  Observer.hpp
Core/DataProcessor/: CMakeLists.txt  CSVDataExporter.cpp  CSVDataExporter.hpp  DataExporter.cpp  DataExporter.hpp
Core/Game/: Bird.cpp  Bird.hpp  CMakeLists.txt  Collision.cpp  Collision.hpp  Entity.cpp  Entity.hpp  Environment.cpp  Environment.hpp  GameConfig.hpp  GameUtils.cpp  GameUtils.hpp  IController.hpp  Moveable.cpp  Moveable.hpp  Pipes.cpp  Pipes.hpp  Timer.cpp  Timer.hpp  Vector2T.hpp
Core/Gameplay/: BaseSession.cpp  BaseSession.hpp  CMakeLists.txt  CoreGameplay.cpp  CoreGameplay.hpp  DataProvider.cpp  DataProvider.hpp  Event.hpp  GameStateData.hpp  Gameplay.cpp  Gameplay.hpp  GameplayState.hpp  Session.cpp  Session.hpp  State.hpp  Timer.cpp  Timer.hpp
Core/Graphics/: CMakeLists.txt  Circle.cpp  Circle.hpp  Environment.cpp  Environment.hpp  KeyboardController.cpp  KeyboardController.hpp  Pipes.cpp  Pipes.hpp  Rectangle.cpp  Rectangle.hpp  Renderable.cpp  Renderable.hpp  ShapeRenderable.cpp  ShapeRenderable.hpp  Text.cpp  Text.hpp
Core/Tests/: BirdTester.hpp  CMakeLists.txt  CollisionTester.hpp  DataProviderTests.hpp  DenseLayerTester.hpp  GameTester.cpp  GameUtilsTester.hpp  GameplayTester.hpp  test_data.csv
Core/Utils/: ControlOption.hpp  Utils.hpp  Vector2T.hpp
MachineLearning/: AIDrivenSession.cpp  AIDrivenSession.hpp  BirdNeuralNetwork.cpp  BirdNeuralNetwork.hpp  CMakeLists.txt  CoreLogicAdapter.cpp  CoreLogicAdapter.hpp  Environment.cpp  Environment.hpp  MLController.cpp  MLController.hpp  PythonBind.cpp  main.cpp
MachineLearning/Python/: ExportPtToJson.py  FlappyBirdEnvGym.py  GeneticAlgorithm.py  PlayFlappyBirdAI.py  RunGeneticAlgorithm.py  run_random.py  test_env.py
UI/: Button.cpp  Button.hpp  CMakeLists.txt  StartAIGameButton.cpp  StartAIGameButton.hpp  StartButton.cpp  StartButton.hpp  StartCVSessionButton.cpp  StartCVSessionButton.hpp  UI.cpp  UI.hpp
